// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStructuredOutputRoute > generates route with generateObject and auth stub 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { generateText, Output } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { outputSchema } from '~/lib/schemas/output.schema'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { input } = await req.json()

  const { output } = await generateText({
    model: anthropic("claude-opus-4-5"),
    output: Output.object({ schema: outputSchema }),
    prompt: input,
  })

  return Response.json(output)
}
"
`;

exports[`generateStructuredOutputRoute > includes auth guard when auth selected 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { generateText, Output } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { outputSchema } from '~/lib/schemas/output.schema'
import { auth } from '~/auth'

export async function POST(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const { input } = await req.json()

  const { output } = await generateText({
    model: anthropic("claude-opus-4-5"),
    output: Output.object({ schema: outputSchema }),
    prompt: input,
  })

  return Response.json(output)
}
"
`;

exports[`generateStructuredOutputRoute > strips src/ prefix from schema import path 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { generateText, Output } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { outputSchema } from '~/lib/schemas/output.schema'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { input } = await req.json()

  const { output } = await generateText({
    model: anthropic("claude-opus-4-5"),
    output: Output.object({ schema: outputSchema }),
    prompt: input,
  })

  return Response.json(output)
}
"
`;

exports[`generateStructuredOutputRoute > uses custom schema name 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { generateText, Output } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { filterSchema } from '~/lib/schemas/filter.schema'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { input } = await req.json()

  const { output } = await generateText({
    model: anthropic("claude-opus-4-5"),
    output: Output.object({ schema: filterSchema }),
    prompt: input,
  })

  return Response.json(output)
}
"
`;

exports[`generateStructuredOutputRoute > works with openai provider 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { generateText, Output } from 'ai'
import { openai } from '@ai-sdk/openai'
import { outputSchema } from '~/lib/schemas/output.schema'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '~/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { input } = await req.json()

  const { output } = await generateText({
    model: openai("gpt-5.4-nano"),
    output: Output.object({ schema: outputSchema }),
    prompt: input,
  })

  return Response.json(output)
}
"
`;
